--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -22,7 +22,7 @@
                 </form>
                  <p class="mt-2">
                      <a  href="{% url 'password_reset' %}">Forgotten your password?</a><br>
-                     <a href="#">Register</a>
+                     <a href="{% url 'register' %}">Register</a>
                  </p>
              </div>
          </div>
