--- a/src/account/templates/account/registration/register_done.html
+++ b/src/account/templates/account/registration/register_done.html
@@ -3,5 +3,5 @@
 {% block title %}Done Registration {% endblock %}
 
 {% block content %}
-    <h3>An email has been sent to you. Follow the link in the email to continue registration.</h3>
+    <h3 class="mt-3">An email has been sent to you. Follow the link in the email to continue registration.</h3>
 {% endblock %}
