--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
               <h6 class="m-1">{{ request.user.first_name }}</h6>
               <a href="{% url 'logout' %}">Logout</a>
           {% else %}
-              <a href="{% url 'login' %}">Log-in</a>
+              <a href="{% url 'login' %}" class="m-1">Log-in</a>
           {% endif %}
         </div>
       </div>
