--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
     <title>{% block title %}DjangoGramm{% endblock %}</title>
   </head>
@@ -29,20 +30,20 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link ">Disabled</a>
+              <a class="nav-link " href="{% url 'profile' request.user.username%}">Profile</a>
             </li>
           </ul>
 
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="btn btn-outline-secondary" type="submit">Search</button>
           </form>
           {% if request.user.is_authenticated %}
-            <img src="{%if request.user.avatar%} {{request.user.avatar.url}} {% else %} {% static 'img/images.png' %} {% endif %}" class="rounded-circle m-1" style="height:40px; width:40px;" alt="">
+            <img src="{%if request.user.avatar%} {{request.user.avatar.url}} {% else %} {% static 'img/images.png' %} {% endif %}" class="rounded-circle m-1 avatar_base"  alt="">
               <h6 class="m-1">{{ request.user.first_name }}</h6>
-              <a href="{% url 'logout' %}">Logout</a>
+              <a href="{% url 'logout' %}" class="link-secondary">Logout</a>
           {% else %}
-              <a href="{% url 'login' %}" class="m-1">Log-in</a>
+              <a href="{% url 'login' %}" class="m-1 link-secondary">Log-in</a>
           {% endif %}
         </div>
       </div>
