--- a/src/account/static/css/main.css
+++ b/src/account/static/css/main.css
@@ -28,3 +28,15 @@
         font-size:10px;
     }
 }
+
+.image {
+    opacity: 1;
+}
+.image:hover {
+    opacity: .60;
+}
+
+.image_detail {
+    height: 800px;
+
+}
