--- a/templates/base.html
+++ b/templates/base.html
@@ -22,23 +22,25 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            {% if request.user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link {% if section == 'home' %}active{% endif %}" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link {% if section == 'Link' %}active{% endif %}" href="#">+</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link " href="{% url 'profile' request.user.username%}">Profile</a>
+              <a class="nav-link {% if section == 'profile' %}active{% endif %}" href="{% url 'profile' request.user.username %}">Profile</a>
             </li>
+            {% endif %}
           </ul>
-
+          {% if request.user.is_authenticated %}
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-secondary" type="submit">Search</button>
           </form>
-          {% if request.user.is_authenticated %}
+
             <img src="{%if request.user.avatar%} {{request.user.avatar.url}} {% else %} {% static 'img/images.png' %} {% endif %}" class="rounded-circle m-1 avatar_base"  alt="">
               <h6 class="m-1">{{ request.user.first_name }}</h6>
               <a href="{% url 'logout' %}" class="link-secondary">Logout</a>
