--- a/src/account/templates/account/profile/profile.html
+++ b/src/account/templates/account/profile/profile.html
@@ -39,8 +39,8 @@
     {%for post in object_list%}
       <div class="col">
         <div class="card h-100">
-            <a href="{{post.get_absolute_url}}">
-                <img src="{{post.image.url}}" class="card-img-top image" alt="...">
+            <a href="{{post.get_absolute_url}}" class="h-100">
+                <img src="{{post.image.url}}" class="card-img-top h-100 image" alt="...">
             </a>
         </div>
       </div>
