add scrips connect

--- a/src/account/templates/account/profile/image_detail.html
+++ b/src/account/templates/account/profile/image_detail.html
@@ -9,9 +9,11 @@
         <br>
         <div class="row mt-3">
             <div class="col-6">
-                <a href="#" class="m-2">
-                    <button type="button" class="btn btn-outline-secondary rounded-circle ">Like {{object.like.count}}</button>
-                 </a>
+                <a  href="#" class="m-2">
+                    <button  id="like" data-id_image="{{ object.id }}" data-action="{% if request.user in object.like.all %}un{% endif %}like" data-id_total="{{ object.like.count }}"  type="button" class="btn btn-{% if request.user in object.like.all %}danger{%else%}outline-secondary{%endif%} rounded-circle">
+                        Like {{object.like.count}}
+                    </button>
+                </a>
             </div>
             <div class="col-6">
                 <a href="{% url 'delete_image' object.id %}">
@@ -51,5 +53,7 @@
          </form>
     </div>
 </div>
+{% csrf_token %}
+<script src="{% static 'js/like.js'%}" ></script>
 
 {% endblock %}
