--- a/src/account/templates/account/profile/profile_list.html
+++ b/src/account/templates/account/profile/profile_list.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 {% load static %}
-{% load account_tags %}
 
 {% block title %}Profile{% endblock %}
 {% block content %}
@@ -23,7 +22,7 @@
                     <ul class="mt-5 custom_ul" >
                         <li class="custom_li font_ul">Publications {{object_list.count}}</li>
                         <li class="custom_li font_ul li_menu" data-bs-toggle="modal" data-bs-target="#Subscribers">Followers {{request.user.rel_to_set.count}}  </li>
-                        <li class="custom_li font_ul li_menu" data-bs-toggle="modal" data-bs-target="#Subscription">Subscription {{request.user.rel_from_set.count}}</li>
+                        <li id="total" class="custom_li font_ul li_menu" data-total_subscribe="{{request.user.rel_from_set.count}}" data-bs-toggle="modal" data-bs-target="#Subscription">Subscription {{request.user.rel_from_set.count}}</li>
                     </ul>
                 </div>
             </div>
@@ -87,13 +86,9 @@
                       <div class="col-6">
                           <a href="">{{subscriber.user_to.first_name}}</a>
                       </div>
-                      <div class="col-4">
-                          {% get_subscription_in_subscribers subscriber.user_to request.user.id as status%}
-                          {%if status %}
-                            <button class="btn btn-outline-secondary">Subscriptions</button>
-                          {%else%}
-                            <button class="btn btn-danger">Subscribe</button>
-                          {%endif%}
+                      <div class="col-4">                                                
+                            <button id="subscriptions" data-id_subscribe={{subscriber.user_to.id}} class="btn btn-outline-secondary">Subscriptions</button>                       
+                            <!-- <button id="subscribe" class="btn btn-danger">Subscribe</button> -->   
                       </div>
                   </div>
               </div>
@@ -127,7 +122,7 @@
                           <a href="">{{subscriber.user_from.first_name}}</a>
                       </div>
                       <div class="col-4">
-                            <button class="btn btn-outline-secondary">Delete</button>
+                            <a href="{% url 'subscription_delete' subscriber.user_from.id%}" class="btn btn-outline-secondary">Delete</a>
                       </div>
                   </div>
               </div>
@@ -137,4 +132,8 @@
     </div>
   </div>
 </div>
+
+{% csrf_token %}
+<script src="{% static 'js/subscription_list.js'%}" ></script>
+
 {% endblock %}
