--- a/templates/base.html
+++ b/templates/base.html
@@ -59,8 +59,8 @@
             {% endif %}
           </ul>
           {% if request.user.is_authenticated %}
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <form action="{% url 'search'%}" class="d-flex">
+            <input class="form-control me-2" name="query" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-secondary" type="submit">Search</button>
           </form>
 
