--- a/src/account/static/css/main.css
+++ b/src/account/static/css/main.css
@@ -14,6 +14,11 @@
     width:30px;
 }
 
+.avatar_base_home {
+    height:50px;
+    width:50px;
+}
+
 .avatar_profile {
     height: 150px;
     width: 150px;
