--- a/src/account/templates/account/home/home.html
+++ b/src/account/templates/account/home/home.html
@@ -40,6 +40,23 @@
 
 </div>
 {% endfor%}
+    <div class="m-3 aside">
+     <nav aria-label="Page navigation example">
+          <ul class="pagination">
+               {% if page_obj.has_previous %}
+                    <li class="page-item"><a class="page-link link-secondary" href="?page=1">&laquo; First</a></li>
+                    <li class="page-item"><a class="page-link link-secondary" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+               {% endif %}
+
+                <li class="page-item"><a class="page-link link-secondary" href="#">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</a></li>
+
+                {% if page_obj.has_next %}
+                    <li class="page-item"><a class="page-link link-secondary" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+                    <li class="page-item"><a class="page-link link-secondary" href="?page={{ page_obj.paginator.num_pages }}">Last &raquo;</a></li>
+                {% endif %}
+          </ul>
+     </nav>
+</div>
 </div>
 
 {% csrf_token %}
