--- a/src/account/templates/account/home/home.html
+++ b/src/account/templates/account/home/home.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% load static %}
+{% load account_tags %}
 
 {% block title %}Home{% endblock %}
 
@@ -39,6 +40,39 @@
   </div>
 
 </div>
+    {% empty %}
+        <h3 class="mt-3">Recommendations for you</h3>
+        <hr>
+        <div class="modal-body">
+        {% for user in recommendations_list %}
+            {%if request.user != user %}
+            <div class="card mb-3">
+                  <div class="card-body ">
+                      <div class="row">
+                          <div class="col-2">
+                              <a href="{% url 'profile' user.username %}">
+                                  <img src="{{user.avatar.url}}" class="rounded-circle avatar_subs" alt="">
+                              </a>
+                          </div>
+                          <div class="col-5">
+                              <a href="{% url 'profile' user.username %}">{{user.first_name}}</a>
+                          </div>
+                          <div class="col-5">
+                            {% if_subscription user request.user as is_sub%}
+                            {%if  is_sub %}
+                                <button id="subscriptions_user_w" data-id_subscribe={{user.id}} class="btn btn-outline-secondary">Subscriptions</button>
+                            {%else%}
+                                <button id="subscribe_user_w" data-id_subscribe={{user.id}} class="btn btn-danger">Subscribe</button>
+                            {%endif%}
+                          </div>
+                      </div>
+                  </div>
+            </div>
+            {%endif%}
+        {%endfor%}
+        </div>
+
+
 {% endfor%}
     <div class="m-3 aside">
      <nav aria-label="Page navigation example">
@@ -60,5 +94,6 @@
 </div>
 
 {% csrf_token %}
+<script src="{% static 'js/search.js'%}" ></script>
 <script src="{% static 'js/like.js'%}" ></script>
 {% endblock %}
