--- a/src/account/templates/account/image/image_create.html
+++ b/src/account/templates/account/image/image_create.html
@@ -5,10 +5,12 @@
 {% block title %}Create image{% endblock %}
 
 {% block content %}
-<h3 class="text-center mt-5"> Add image </h3>
-<form action="" method="post" enctype="multipart/form-data" class="mt-3">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <input class="btn btn-secondary mt-2" type="submit" value="Add image">
-</form>
+<div class="col-md-6 offset-md-3 mt-3">
+    <h3 class="text-center mt-5"> Add image </h3>
+    <form action="" method="post" enctype="multipart/form-data" class="mt-3">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <input class="btn btn-secondary mt-2" type="submit" value="Add image">
+    </form>
+</div>
 {% endblock %}
