--- a/src/account/templates/account/home/home.html
+++ b/src/account/templates/account/home/home.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-2">
             <a href="{% url 'profile' post.owner.username %}">
-                <img src="{{post.owner.avatar.url}}" class="rounded-circle avatar_base_home" alt="">
+                <img src="{%if post.owner.avatar%} {{post.owner.avatar.url}} {% else %} {% static 'img/images.png' %} {% endif %}" class="rounded-circle avatar_base_home" alt="">
             </a>
         </div>
         <div class="col-10">
@@ -52,7 +52,7 @@
                       <div class="row">
                           <div class="col-2">
                               <a href="{% url 'profile' user.username %}">
-                                  <img src="{{user.avatar.url}}" class="rounded-circle avatar_subs" alt="">
+                                  <img src="{%if user.avatar%} {{user.avatar.url}} {% else %} {% static 'img/images.png' %} {% endif %}" class="rounded-circle avatar_subs" alt="">
                               </a>
                           </div>
                           <div class="col-5">
