--- a/src/actions/templates/actions/actions_list.html
+++ b/src/actions/templates/actions/actions_list.html
@@ -13,7 +13,7 @@
               <div class="row">
                   <div class="col-2">
                       <a href="{% url 'profile' action.user.username %}">
-                          <img src="{{action.user.avatar.url}}" class="rounded-circle avatar_subs" alt="">
+                          <img src="{%if action.user.avatar%} {{action.user.avatar.url}} {% else %} {% static 'img/images.png' %} {% endif %}" class="rounded-circle avatar_subs" alt="">
                       </a>
                   </div>
                   <div class="col-2">
@@ -23,7 +23,7 @@
                       </a>
                       {%elif action.target.avatar%}
                       <a href="{% url 'profile' action.target.username %}">
-                          <img src="{{action.target.avatar.url}}" class="rounded-circle avatar_subs" alt="">
+                          <img src="{%if action.target.avatar %} {{action.target.avatar.url}} {% else %} {% static 'img/images.png' %} {% endif %}" class="rounded-circle avatar_subs" alt="">
                       </a>
                       {%endif%}
                   </div>
