--- a/src/account/templates/account/search/search_list.html
+++ b/src/account/templates/account/search/search_list.html
@@ -18,10 +18,10 @@
                       <div class="row">
                           <div class="col-2">
                             {%if request.user == user%}
-                                <img src="{{user.avatar.url}}" class="rounded-circle avatar_subs" alt="">
+                                <img src="{%if user.avatar %} {{user.avatar.url}} {% else %} {% static 'img/images.png' %} {% endif %}" class="rounded-circle avatar_subs" alt="">
                             {%else%}
                               <a href="{% url 'profile' user.username %}">
-                                  <img src="{{user.avatar.url}}" class="rounded-circle avatar_subs" alt="">
+                                  <img src="{%if user.avatar %} {{user.avatar.url}} {% else %} {% static 'img/images.png' %} {% endif %}" class="rounded-circle avatar_subs" alt="">
                               </a>
                             {%endif%}
                           </div>
